styles.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    background-color: #f0f0f0;
    font-family: Arial, sans-serif;
}

.building {
    display: flex;
    flex-direction: column-reverse;
    width: 108rem;
}

.floor {
    display: flex;
    flex-direction: column;
    border: 1px solid #333;
    background-color: #fff;
    padding: 20px;
    margin: 15px 0;
    width: 100%;
    height: 110px;
    position: relative;
}

.floor-info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.floor-number {
    font-weight: bold;
}

.buttons {
    display: flex;
    align-items: center;
    gap: 20px;
    width: 100%;
    margin-left: 50px;
}

.control {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.empty-boxes {
    display: flex;
    gap: 10px;
    flex-grow: 1; /* Ensure the empty boxes stretch to fill remaining space */
}

.empty-box {
    width: 120px;
    height: 129px;
    margin-left: 10px;
    background-color: #ccc;
    border: 1px solid #999;
}

button {
    padding: 10px;
    cursor: pointer;
}

.lifts {
    display: flex;
    position: absolute;
    bottom: 0;
    left: 200px;
    gap: 120px;
}

.lift {
    width: 120px;
    height: 160px;
    background-color: #333;
    border-radius: 5px;
}

